cmake_minimum_required(VERSION 3.14)
project(ccf_pro_clion)

set(CMAKE_CXX_STANDARD 11)

add_executable(ccf_pro_clion main.cpp 201812-3.cpp 201312-1.cpp 201312-2.cpp 201312-3.cpp 201312-4.cpp 201903-1.cpp 201903-2.cpp 201903-3.cpp 201903-4.cpp calculator.cpp DFS_01beibao.cpp BFS.cpp HuffmanTree.cpp DFS_travel_lingjiejvzheng.cpp PATA1034_HeadOfGang.cpp BFS_linjiejvzhen.cpp BFS_linjiejvzheng.cpp PATA1076_weibo.cpp Dijkstra_linjiejvzhen.cpp Dijkstra_linjiebiao.cpp Dijstra_Alexander.cpp DFS_linjiejvzhen_lujin.cpp DIjstra.cpp Dijstra_DFS.cpp DP.cpp 201812-4.cpp 201809-2.cpp 201812-1.cpp 201809-3.cpp)